# IotEdgeGateway

./: .gitignore  CMakeLists.txt  README.md
cmake/: version.hpp.in
cmake/toolchains/: rk3568-aarch64.cmake  rk3568-aarch64.template.cmake  rk3568-buildroot.cmake
config/environments/: production.yaml  rk3568.yaml
config/rules/: alarm-rules.yaml  automation-rules.yaml
docs/: mcu-mqtt-protocol.md  newbie-build-iot-gateway-tutorial.md  rk3568-cross-compile-package.md  rk3568-deploy.md  sqlite-database-usage.md  stm32-actuator-command-debug.md  stm32-mqtt-actuator-contract.md  zigbee-dl20-protocol.md
scripts/: package_runtime.sh
scripts/init.d/: S45wifi_jk  S70mosquitto  S81wifi_jk  S85iotgw  S85mosquitto
scripts/rk3568/: start.sh  test_mqtt.sh
src/core/common/config/: config_manager.hpp  config_validator.cpp
src/core/common/logger/: file_logger.cpp  logger.hpp
src/core/common/utils/: json_utils.hpp  time_utils.hpp
src/core/control/: rule_engine.hpp
src/core/device/manager/: device_manager.hpp  device_registry.cpp
src/core/device/model/: device_entity.hpp  device_status.hpp
src/core/protocol_adapters/: adapter_base.hpp
src/core/protocol_adapters/mqtt_adapter/: mqtt_adapter.hpp  mqtt_client.cpp
src/core/protocol_adapters/zigbee_adapter/: zigbee_serial_adapter.cpp  zigbee_serial_adapter.hpp
src/gateway/: gateway_core.cpp  gateway_core.hpp  main.cpp
src/services/storage/: database_service.cpp  database_service.hpp
src/services/system_services/camera/: camera_manager.cpp  camera_manager.hpp
src/services/web_services/api/: camera_api.cpp  database_api.cpp  device_api.cpp  rest_api.hpp  rule_api.cpp  system_api.cpp  zigbee_api.cpp
src/services/web_services/websocket/: websocket_server.hpp
www/: index.html
